--- a/Bayesian_optimization_case_study.ipynb
+++ b/Bayesian_optimization_case_study.ipynb
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -266,11 +266,11 @@
      "text": [
       "|   iter    |  target   |     a     |     b     |\n",
       "-------------------------------------------------\n",
-      "| \u001b[0m6        \u001b[0m | \u001b[0m8.898    \u001b[0m | \u001b[0m2.743    \u001b[0m | \u001b[0m6.155    \u001b[0m |\n",
-      "| \u001b[0m7        \u001b[0m | \u001b[0m7.215    \u001b[0m | \u001b[0m1.283    \u001b[0m | \u001b[0m5.932    \u001b[0m |\n",
-      "| \u001b[0m8        \u001b[0m | \u001b[0m8.376    \u001b[0m | \u001b[0m1.509    \u001b[0m | \u001b[0m6.867    \u001b[0m |\n",
-      "| \u001b[95m9        \u001b[0m | \u001b[95m10.0     \u001b[0m | \u001b[95m3.0      \u001b[0m | \u001b[95m7.0      \u001b[0m |\n",
-      "| \u001b[0m10       \u001b[0m | \u001b[0m9.873    \u001b[0m | \u001b[0m2.875    \u001b[0m | \u001b[0m6.997    \u001b[0m |\n",
+      "| \u001b[0m1        \u001b[0m | \u001b[0m7.099    \u001b[0m | \u001b[0m1.267    \u001b[0m | \u001b[0m5.833    \u001b[0m |\n",
+      "| \u001b[95m2        \u001b[0m | \u001b[95m7.497    \u001b[0m | \u001b[95m2.748    \u001b[0m | \u001b[95m4.749    \u001b[0m |\n",
+      "| \u001b[95m3        \u001b[0m | \u001b[95m7.728    \u001b[0m | \u001b[95m2.499    \u001b[0m | \u001b[95m5.23     \u001b[0m |\n",
+      "| \u001b[95m4        \u001b[0m | \u001b[95m7.861    \u001b[0m | \u001b[95m2.553    \u001b[0m | \u001b[95m5.308    \u001b[0m |\n",
+      "| \u001b[0m5        \u001b[0m | \u001b[0m6.565    \u001b[0m | \u001b[0m1.428    \u001b[0m | \u001b[0m5.137    \u001b[0m |\n",
       "=================================================\n"
      ]
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -306,16 +306,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'a': 3.0, 'b': 7.0}\n"
+      "{'a': 2.552781362172377, 'b': 5.308446247838022}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "10.0"
+       "7.861227610010399"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -504,7 +504,7 @@
        "4                 Y  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -618,7 +618,7 @@
        "max      2534.000000    4962.00000"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T15:38:42.677690Z",
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -792,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T14:31:58.412296Z",
@@ -875,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T15:40:14.034265Z",
@@ -926,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T15:48:04.682447Z",
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T15:49:01.513767Z",
@@ -996,13 +996,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{}\n"
+      "|   iter    |  target   | lambda_l1 | lambda_l2 | max_depth | min_ch... | min_da... | num_le... |\n",
+      "-------------------------------------------------------------------------------------------------\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "cv() got an unexpected keyword argument 'early_stopping_rounds'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[28], line 13\u001b[0m\n\u001b[1;32m     10\u001b[0m lgbBO \u001b[38;5;241m=\u001b[39m BayesianOptimization(f\u001b[38;5;241m=\u001b[39mlgb_eval, pbounds\u001b[38;5;241m=\u001b[39mpbounds, random_state\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m42\u001b[39m)\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# Perform optimization\u001b[39;00m\n\u001b[0;32m---> 13\u001b[0m lgbBO\u001b[38;5;241m.\u001b[39mmaximize(init_points\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5\u001b[39m, n_iter\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m10\u001b[39m)\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# Print the best result\u001b[39;00m\n\u001b[1;32m     16\u001b[0m best_result \u001b[38;5;241m=\u001b[39m lgbBO\u001b[38;5;241m.\u001b[39mmax\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/bayes_opt/bayesian_optimization.py:310\u001b[0m, in \u001b[0;36mBayesianOptimization.maximize\u001b[0;34m(self, init_points, n_iter, acquisition_function, acq, kappa, kappa_decay, kappa_decay_delay, xi, **gp_params)\u001b[0m\n\u001b[1;32m    308\u001b[0m     x_probe \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39msuggest(util)\n\u001b[1;32m    309\u001b[0m     iteration \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[0;32m--> 310\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mprobe(x_probe, lazy\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n\u001b[1;32m    312\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_bounds_transformer \u001b[38;5;129;01mand\u001b[39;00m iteration \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m    313\u001b[0m     \u001b[38;5;66;03m# The bounds transformer should only modify the bounds after\u001b[39;00m\n\u001b[1;32m    314\u001b[0m     \u001b[38;5;66;03m# the init_points points (only for the true iterations)\u001b[39;00m\n\u001b[1;32m    315\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mset_bounds(\n\u001b[1;32m    316\u001b[0m         \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_bounds_transformer\u001b[38;5;241m.\u001b[39mtransform(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_space))\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/bayes_opt/bayesian_optimization.py:208\u001b[0m, in \u001b[0;36mBayesianOptimization.probe\u001b[0;34m(self, params, lazy)\u001b[0m\n\u001b[1;32m    206\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_queue\u001b[38;5;241m.\u001b[39madd(params)\n\u001b[1;32m    207\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 208\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_space\u001b[38;5;241m.\u001b[39mprobe(params)\n\u001b[1;32m    209\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdispatch(Events\u001b[38;5;241m.\u001b[39mOPTIMIZATION_STEP)\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.11/site-packages/bayes_opt/target_space.py:236\u001b[0m, in \u001b[0;36mTargetSpace.probe\u001b[0;34m(self, params)\u001b[0m\n\u001b[1;32m    234\u001b[0m x \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_as_array(params)\n\u001b[1;32m    235\u001b[0m params \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mdict\u001b[39m(\u001b[38;5;28mzip\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_keys, x))\n\u001b[0;32m--> 236\u001b[0m target \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtarget_func(\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mparams)\n\u001b[1;32m    238\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_constraint \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    239\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mregister(x, target)\n",
+      "Cell \u001b[0;32mIn[24], line 19\u001b[0m, in \u001b[0;36mlgb_eval\u001b[0;34m(num_leaves, max_depth, lambda_l2, lambda_l1, min_child_samples, min_data_in_leaf)\u001b[0m\n\u001b[1;32m      2\u001b[0m params \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mobjective\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mbinary\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmetric\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mauc\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mverbosity\u001b[39m\u001b[38;5;124m\"\u001b[39m: \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m\n\u001b[1;32m     17\u001b[0m }\n\u001b[1;32m     18\u001b[0m lgtrain \u001b[38;5;241m=\u001b[39m lightgbm\u001b[38;5;241m.\u001b[39mDataset(X_train, y_train, categorical_feature\u001b[38;5;241m=\u001b[39mcategorical_features)\n\u001b[0;32m---> 19\u001b[0m cv_result \u001b[38;5;241m=\u001b[39m lightgbm\u001b[38;5;241m.\u001b[39mcv(params,\n\u001b[1;32m     20\u001b[0m                         lgtrain,\n\u001b[1;32m     21\u001b[0m                         num_boost_round\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1000\u001b[39m,  \u001b[38;5;66;03m# Adjust the maximum number of boosting rounds\u001b[39;00m\n\u001b[1;32m     22\u001b[0m                         early_stopping_rounds\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100\u001b[39m,\n\u001b[1;32m     23\u001b[0m                         stratified\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m,\n\u001b[1;32m     24\u001b[0m                         nfold\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m3\u001b[39m)\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m cv_result[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mauc-mean\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n",
+      "\u001b[0;31mTypeError\u001b[0m: cv() got an unexpected keyword argument 'early_stopping_rounds'"
      ]
     }
    ],
    "source": [
-    "#lgbBO.max\n",
-    "print(lgbBO.max)"
+    "# Define the search space for hyperparameters\n",
+    "pbounds = {'num_leaves': (20, 50),\n",
+    "           'max_depth': (5, 15),\n",
+    "           'lambda_l2': (0, 1),\n",
+    "           'lambda_l1': (0, 1),\n",
+    "           'min_child_samples': (10, 30),\n",
+    "           'min_data_in_leaf': (10, 30)}\n",
+    "\n",
+    "# Initialize BayesianOptimization instance\n",
+    "lgbBO = BayesianOptimization(f=lgb_eval, pbounds=pbounds, random_state=42)\n",
+    "\n",
+    "# Perform optimization\n",
+    "lgbBO.maximize(init_points=5, n_iter=10)\n",
+    "\n",
+    "# Print the best result\n",
+    "best_result = lgbBO.max\n",
+    "print(\"Best result obtained:\")\n",
+    "print(best_result)"
    ]
   },
   {
@@ -1021,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-22T15:51:01.001688Z",
@@ -1033,10 +1065,14 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No results available.\n"
+     "ename": "NameError",
+     "evalue": "name 'lgbBO' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[20], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#lgbBO.res[0]\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(lgbBO\u001b[38;5;241m.\u001b[39mres) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;28mprint\u001b[39m(lgbBO\u001b[38;5;241m.\u001b[39mres[\u001b[38;5;241m0\u001b[39m])\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'lgbBO' is not defined"
      ]
     }
    ],
@@ -1047,6 +1083,13 @@
     "else:\n",
     "    print(\"No results available.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
